// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        0
      </span>
      
    </span>
    
  </div>
</div>
`;

exports[`Render properties.decimalSeparator: ',' - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        ,45
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Render properties.groupSeparator: ',' - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3.565.542
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        ,45
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Render properties.precision: 2 - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        .45
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Render properties.prefix: R - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    <span
      className="ant-statistic-content-prefix"
    >
      R
    </span>
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        .45
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Render properties.prefixIcon: AccountBookFilled - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    <span
      className="ant-statistic-content-prefix"
    >
      <span
        aria-label="loading-3-quarters"
        className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},null]}"
        id="properties.prefixIcon: AccountBookFilled_prefixIcon"
        required={false}
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading-3-quarters"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
          />
        </svg>
      </span>
    </span>
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        .45
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Render properties.suffix: Rand - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        .45
      </span>
    </span>
    <span
      className="ant-statistic-content-suffix"
    >
      Rand
    </span>
  </div>
</div>
`;

exports[`Render properties.suffixIcon: AccountBookFilled - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        .45
      </span>
    </span>
    <span
      className="ant-statistic-content-suffix"
    >
      <span
        aria-label="loading-3-quarters"
        className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},null]}"
        id="properties.suffixIcon: AccountBookFilled_suffixIcon"
        required={false}
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading-3-quarters"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-title"
  >
    Statistic title
  </div>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        0
      </span>
      
    </span>
    
  </div>
</div>
`;

exports[`Render properties.type: intlListFormat - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      Motorcycle, Bus, and Car
    </span>
    
  </div>
</div>
`;

exports[`Render properties.type: intlNumberFormat - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      ZAR 3.45
    </span>
    
  </div>
</div>
`;

exports[`Render properties.type: intlRelativeTimeFormat - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      3 days ago
    </span>
    
  </div>
</div>
`;

exports[`Render properties.type: momentFormat - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      4 Jun 2019
    </span>
    
  </div>
</div>
`;

exports[`Render properties.type: momentHumanizeDuration - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      3 days ago
    </span>
    
  </div>
</div>
`;

exports[`Render properties.value: '3.45' as string - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        .45
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Render properties.value: 3.45 as number - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        3
      </span>
      <span
        className="ant-statistic-content-value-decimal"
      >
        .45
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.decimalSeparator: ',' 1`] = `true`;

exports[`Test Schema properties.decimalSeparator: ',' 2`] = `null`;

exports[`Test Schema properties.groupSeparator: ',' 1`] = `true`;

exports[`Test Schema properties.groupSeparator: ',' 2`] = `null`;

exports[`Test Schema properties.precision: 2 1`] = `true`;

exports[`Test Schema properties.precision: 2 2`] = `null`;

exports[`Test Schema properties.prefix: R 1`] = `true`;

exports[`Test Schema properties.prefix: R 2`] = `null`;

exports[`Test Schema properties.prefixIcon: AccountBookFilled 1`] = `true`;

exports[`Test Schema properties.prefixIcon: AccountBookFilled 2`] = `null`;

exports[`Test Schema properties.suffix: Rand 1`] = `true`;

exports[`Test Schema properties.suffix: Rand 2`] = `null`;

exports[`Test Schema properties.suffixIcon: AccountBookFilled 1`] = `true`;

exports[`Test Schema properties.suffixIcon: AccountBookFilled 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema properties.type: intlListFormat 1`] = `true`;

exports[`Test Schema properties.type: intlListFormat 2`] = `null`;

exports[`Test Schema properties.type: intlNumberFormat 1`] = `true`;

exports[`Test Schema properties.type: intlNumberFormat 2`] = `null`;

exports[`Test Schema properties.type: intlRelativeTimeFormat 1`] = `true`;

exports[`Test Schema properties.type: intlRelativeTimeFormat 2`] = `null`;

exports[`Test Schema properties.type: momentFormat 1`] = `true`;

exports[`Test Schema properties.type: momentFormat 2`] = `null`;

exports[`Test Schema properties.type: momentHumanizeDuration 1`] = `true`;

exports[`Test Schema properties.type: momentHumanizeDuration 2`] = `null`;

exports[`Test Schema properties.value: '3.45' as string 1`] = `true`;

exports[`Test Schema properties.value: '3.45' as string 2`] = `null`;

exports[`Test Schema properties.value: 3.45 as number 1`] = `true`;

exports[`Test Schema properties.value: 3.45 as number 2`] = `null`;
